Fixed buttons wrapping in images index

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -63,7 +63,10 @@ body {
  }
  .container{
       max-width: 850px;
-  }
+ }
+.btn-group {
+    display: flex;
+}
 
 @media screen and (max-width: 767px) {
     .body {
